<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vbllopes.adminappherdeirosdofuturo.enviaritens">

    <Button
        android:id="@+id/btSelecionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnProcurar_Click"
        android:text="@string/escolher_imagem" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNomeItem"
        android:hint="@string/hint_nome_item"/>

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnUpload_Click"
        android:text="@string/btenviar" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarEventos"
        android:onClick="btMainEvent_Click"/>
</LinearLayout>
