<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vbllopes.adminappherdeirosdofuturo.MainEventActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/nomeEvento" />

    <EditText
        android:id="@+id/eNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eNomeEvento"
        android:inputType="text"
        android:lines="1"
        android:padding="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entreEvento"
        android:id="@+id/btEscolher"
        android:onClick="showDatePickerDialog_onClick" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btCadastrarEvento_onClick"
        android:text="@string/cadastrarEvento" />
</android.support.v7.widget.LinearLayoutCompat>
